force-app/main/default/objects/Assessment__c/fields/engine__c.field-meta.xml
<CustomField>
    <fullName>engine__c</fullName>
    <label>エンジン</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>スタート</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>かからない</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>確認できず</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>