force-app/main/default/objects/Assessment__c/fields/engine_katasiki__c.field-meta.xml
<CustomField>
    <fullName>engine_katasiki__c</fullName>
    <label>エンジン型式</label>
    <length>255</length>
    <type>Text</type>
</CustomField>