force-app/main/default/objects/Assessment__c/fields/engine_ng__c.field-meta.xml
<CustomField>
    <fullName>engine_ng__c</fullName>
    <label>エンジンNG</label>
    <length>255</length>
    <type>Text</type>
</CustomField>