force-app/main/default/objects/Assessment__c/fields/engine_url__c.field-meta.xml
<CustomField>
    <fullName>engine_url__c</fullName>
    <label>エンジンルームURL</label>
    <type>Url</type>
</CustomField>