force-app/main/default/objects/Assessment__c/fields/Free__c.field-meta.xml
<CustomField>
    <fullName>Free__c</fullName>
    <description>長谷川</description>
    <label>備考・伝達内容</label>
    <type>TextArea</type>
</CustomField>