force-app/main/default/objects/Assessment__c/fields/front_url__c.field-meta.xml
<CustomField>
    <fullName>front_url__c</fullName>
    <label>正面URL</label>
    <type>Url</type>
</CustomField>