force-app/main/default/objects/Assessment__c/fields/fuel_ohter__c.field-meta.xml
<CustomField>
    <fullName>fuel_ohter__c</fullName>
    <label>燃料その他</label>
    <length>255</length>
    <type>Text</type>
</CustomField>