force-app/main/default/objects/Assessment__c/fields/full_katasiki__c.field-meta.xml
<CustomField>
    <fullName>full_katasiki__c</fullName>
    <label>フル型式</label>
    <length>255</length>
    <type>Text</type>
</CustomField>