force-app/main/default/objects/Assessment__c/fields/gojitu_okurihin__c.field-meta.xml
<CustomField>
    <fullName>gojitu_okurihin__c</fullName>
    <label>後日送り品</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>取説</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>メンテ保証書</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>ナンバー</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>スペアキー</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>ナビロム</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>