force-app/main/default/objects/Assessment__c/fields/Grade_en__c.field-meta.xml
<CustomField>
    <fullName>Grade_en__c</fullName>
    <description>海外車両のサイト連携に使用</description>
    <formula>car_grade__r.Name_en__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>グレード（英字）</label>
    <type>Text</type>
</CustomField>