force-app/main/default/objects/Assessment__c/fields/grade_text__c.field-meta.xml
<CustomField>
    <fullName>grade_text__c</fullName>
    <description>長谷川</description>
    <label>【グレード】</label>
    <length>30</length>
    <type>Text</type>
</CustomField>