force-app/main/default/objects/Assessment__c/fields/haiki_ryo__c.field-meta.xml
<CustomField>
    <fullName>haiki_ryo__c</fullName>
    <label>排気量（CC）</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>