force-app/main/default/objects/Assessment__c/fields/import_nen__c.field-meta.xml
<CustomField>
    <fullName>import_nen__c</fullName>
    <label>輸入車年式</label>
    <length>4</length>
    <type>Text</type>
</CustomField>