force-app/main/default/objects/Assessment__c/fields/inner_color__c.field-meta.xml
<CustomField>
    <fullName>inner_color__c</fullName>
    <label>内装色</label>
    <length>255</length>
    <type>Text</type>
</CustomField>