force-app/main/default/objects/Assessment__c/fields/inner_point__c.field-meta.xml
<CustomField>
    <fullName>inner_point__c</fullName>
    <label>内装評価</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>