force-app/main/default/objects/Assessment__c/fields/inspector_report__c.field-meta.xml
<CustomField>
    <fullName>inspector_report__c</fullName>
    <label>検査員報告（修復不具合等）</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>