force-app/main/default/objects/Assessment__c/fields/key__c.field-meta.xml
<CustomField>
    <fullName>key__c</fullName>
    <label>アナタコカギ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>umu</valueSetName>
    </valueSet>
</CustomField>