force-app/main/default/objects/Assessment__c/fields/key_url__c.field-meta.xml
<CustomField>
    <fullName>key_url__c</fullName>
    <label>カギURL</label>
    <type>Url</type>
</CustomField>