force-app/main/default/objects/Assessment__c/fields/Maker_en__c.field-meta.xml
<CustomField>
    <fullName>Maker_en__c</fullName>
    <description>海外車両のサイト連携に使用</description>
    <formula>car_maker__r.maker_name_eizi__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>メーカ（英字）</label>
    <type>Text</type>
</CustomField>