force-app/main/default/objects/Assessment__c/fields/manage_bumon__c.field-meta.xml
<CustomField>
    <fullName>manage_bumon__c</fullName>
    <label>統括部門(テキスト)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>