force-app/main/default/objects/Assessment__c/fields/master_Content__c.field-meta.xml
<CustomField>
    <fullName>master_Content__c</fullName>
    <description>長谷川</description>
    <label>マスタ登録項目</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>メーカ</fullName>
            </value>
            <value>
                <fullName>車種</fullName>
            </value>
            <value>
                <fullName>型式</fullName>
            </value>
            <value>
                <fullName>グレード</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>