force-app/main/default/objects/Assessment__c/fields/mission__c.field-meta.xml
<CustomField>
    <fullName>mission__c</fullName>
    <label>ミッション</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>〇</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>シフトノブ動かない</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>ズレ</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>割れ</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>？</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>動作確認できず未確認</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>すべり</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>