force-app/main/default/objects/Assessment__c/fields/Model_en__c.field-meta.xml
<CustomField>
    <fullName>Model_en__c</fullName>
    <description>海外車両のサイト連携に使用</description>
    <formula>car_model__r.model_name_eizi__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>車種（英字）</label>
    <type>Text</type>
</CustomField>