force-app/main/default/objects/Assessment__c/fields/no_lift_use__c.field-meta.xml
<CustomField>
    <fullName>no_lift_use__c</fullName>
    <label>リフト使用</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>あり</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>なし</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>