force-app/main/default/objects/Assessment__c/fields/no_run_dist__c.field-meta.xml
<CustomField>
    <fullName>no_run_dist__c</fullName>
    <inlineHelpText>距離記載なし：有＝「車検証に距離記載なし」</inlineHelpText>
    <label>距離記載なし</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>umu</valueSetName>
    </valueSet>
</CustomField>