force-app/main/default/objects/Assessment__c/fields/okiba__c.field-meta.xml
<CustomField>
    <fullName>okiba__c</fullName>
    <label>置場（自由入力）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>