force-app/main/default/objects/Assessment__c/fields/okiba_select__c.field-meta.xml
<CustomField>
    <fullName>okiba_select__c</fullName>
    <label>置場</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>---</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>北海道ヤード</label>
            </value>
            <value>
                <fullName>31</fullName>
                <label>秋田ヤード</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>岩手ヤード</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>仙台ヤード</label>
            </value>
            <value>
                <fullName>32</fullName>
                <label>仙台第二ヤード</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>新潟ヤード</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>水戸ヤード</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>栃木ヤード</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>千葉ヤード</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>首都圏ヤード</label>
            </value>
            <value>
                <fullName>27</fullName>
                <label>群馬ヤード</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>神奈川ヤード</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>静岡ヤード</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>長野ヤード</label>
            </value>
            <value>
                <fullName>28</fullName>
                <label>長野第二ヤード</label>
            </value>
            <value>
                <fullName>33</fullName>
                <label>岐阜ヤード</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>金沢ヤード</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>名古屋ヤード</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>名古屋第二ヤード</label>
            </value>
            <value>
                <fullName>34</fullName>
                <label>春日井ヤード</label>
            </value>
            <value>
                <fullName>35</fullName>
                <label>愛知東ヤード</label>
            </value>
            <value>
                <fullName>29</fullName>
                <label>京都ヤード</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>神戸集中ヤード</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>神戸第二ヤード</label>
            </value>
            <value>
                <fullName>36</fullName>
                <label>南大阪ヤード</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>鳥取ヤード</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>岡山ヤード</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>広島ヤード</label>
            </value>
            <value>
                <fullName>23</fullName>
                <label>山口ヤード</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>