force-app/main/default/objects/Assessment__c/fields/OpportunityOwner__c.field-meta.xml
<CustomField>
    <fullName>OpportunityOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>この項目を入力して保存することで、買取商談が作成されます。</inlineHelpText>
    <label>買取商談の所有者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OpportunityOwner_Assessment</relationshipName>
    <type>Lookup</type>
</CustomField>