force-app/main/default/objects/Assessment__c/fields/other_url_01__c.field-meta.xml
<CustomField>
    <fullName>other_url_01__c</fullName>
    <label>その他URL1</label>
    <type>Url</type>
</CustomField>