force-app/main/default/objects/Assessment__c/fields/other_url_02__c.field-meta.xml
<CustomField>
    <fullName>other_url_02__c</fullName>
    <label>その他URL2</label>
    <type>Url</type>
</CustomField>