force-app/main/default/objects/Assessment__c/fields/other_url_03__c.field-meta.xml
<CustomField>
    <fullName>other_url_03__c</fullName>
    <label>その他URL3</label>
    <type>Url</type>
</CustomField>