force-app/main/default/objects/Assessment__c/fields/Owner_PurchaseOpportunity__c.field-meta.xml
<CustomField>
    <fullName>Owner_PurchaseOpportunity__c</fullName>
    <formula>oppotunity__r.Owner__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>買取商談の所有者</label>
    <type>Text</type>
</CustomField>