force-app/main/default/objects/Assessment__c/fields/prime_corner_shuppin__c.field-meta.xml
<CustomField>
    <fullName>prime_corner_shuppin__c</fullName>
    <label>プライムコーナー出品</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>可</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>不可</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>