force-app/main/default/objects/Assessment__c/fields/radiator__c.field-meta.xml
<CustomField>
    <fullName>radiator__c</fullName>
    <label>ラジエター</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>〇</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>×</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>水漏れ</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>押しているが水あり</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>不明</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>