force-app/main/default/objects/Assessment__c/fields/registerdAtGengo__c.field-meta.xml
<CustomField>
    <fullName>registerdAtGengo__c</fullName>
    <label>初年度登録（元号）</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>昭和</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>平成</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>令和</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>