force-app/main/default/objects/Assessment__c/fields/registerdAtMonth__c.field-meta.xml
<CustomField>
    <fullName>registerdAtMonth__c</fullName>
    <label>初年度登録（月）</label>
    <length>2</length>
    <type>Text</type>
</CustomField>