force-app/main/default/objects/Assessment__c/fields/registerdAtYear__c.field-meta.xml
<CustomField>
    <fullName>registerdAtYear__c</fullName>
    <inlineHelpText>必ず西暦４ケタを入力して下さい。他のオブジェクトと連携する際にエラーが発生します。</inlineHelpText>
    <label>初年度年（西暦で記入）</label>
    <length>4</length>
    <type>Text</type>
</CustomField>