force-app/main/default/objects/Assessment__c/fields/rent_register__c.field-meta.xml
<CustomField>
    <fullName>rent_register__c</fullName>
    <label>レンタ登録</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>無</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>有</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>