force-app/main/default/objects/Assessment__c/fields/RequestDate__c.field-meta.xml
<CustomField>
    <fullName>RequestDate__c</fullName>
    <label>査定依頼日（依頼があったときのみ入力）</label>
    <type>Date</type>
</CustomField>