force-app/main/default/objects/Assessment__c/fields/right_back_url__c.field-meta.xml
<CustomField>
    <fullName>right_back_url__c</fullName>
    <label>右後ろURL</label>
    <type>Url</type>
</CustomField>