force-app/main/default/objects/Assessment__c/fields/right_front_url__c.field-meta.xml
<CustomField>
    <fullName>right_front_url__c</fullName>
    <label>右前URL</label>
    <type>Url</type>
</CustomField>