force-app/main/default/objects/Assessment__c/fields/run_dist_unit__c.field-meta.xml
<CustomField>
    <fullName>run_dist_unit__c</fullName>
    <label>走行距離単位</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>km</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>マイル</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>