force-app/main/default/objects/Assessment__c/fields/run_kakunin__c.field-meta.xml
<CustomField>
    <fullName>run_kakunin__c</fullName>
    <label>実走確認</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>OK</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>NG</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>