force-app/main/default/objects/Assessment__c/fields/sales_point__c.field-meta.xml
<CustomField>
    <fullName>sales_point__c</fullName>
    <label>セールスポイント</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>