force-app/main/default/objects/Assessment__c/fields/SalesDataListing__c.field-meta.xml
<CustomField>
    <fullName>SalesDataListing__c</fullName>
    <label>営業データ出品</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>営業データ出品依頼</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>先売り出品依頼</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>