force-app/main/default/objects/Assessment__c/fields/seizo_nen__c.field-meta.xml
<CustomField>
    <fullName>seizo_nen__c</fullName>
    <label>アナタコ製造年式（年）</label>
    <length>4</length>
    <type>Text</type>
</CustomField>