force-app/main/default/objects/Assessment__c/fields/sekisai_ryo__c.field-meta.xml
<CustomField>
    <fullName>sekisai_ryo__c</fullName>
    <label>積載量</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>