force-app/main/default/objects/Assessment__c/fields/SendDateToAuctionSiteSuushiki__c.field-meta.xml
<CustomField>
    <fullName>SendDateToAuctionSiteSuushiki__c</fullName>
    <formula>SendDateToAuctionSite__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>オークションサイトへの送信日時（数式）</label>
    <type>DateTime</type>
</CustomField>