force-app/main/default/objects/Assessment__c/fields/shaken_date_2__c.field-meta.xml
<CustomField>
    <fullName>shaken_date_2__c</fullName>
    <label>車検日２</label>
    <type>Date</type>
</CustomField>