force-app/main/default/objects/Assessment__c/fields/shaken_nen__c.field-meta.xml
<CustomField>
    <fullName>shaken_nen__c</fullName>
    <label>車検付き年</label>
    <length>4</length>
    <type>Text</type>
</CustomField>