force-app/main/default/objects/Assessment__c/fields/shaken_run_dist_2__c.field-meta.xml
<CustomField>
    <fullName>shaken_run_dist_2__c</fullName>
    <label>車検証の走行距離２</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>