force-app/main/default/objects/Assessment__c/fields/shakensho_url__c.field-meta.xml
<CustomField>
    <fullName>shakensho_url__c</fullName>
    <label>車検証URL</label>
    <type>Url</type>
</CustomField>