force-app/main/default/objects/Assessment__c/fields/shift__c.field-meta.xml
<CustomField>
    <fullName>shift__c</fullName>
    <label>シフト</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>AT</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>4MT</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>5MT</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>6MT</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>7MT</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>8MT</label>
            </value>
            <value>
                <fullName>0</fullName>
                <label>その他</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>