force-app/main/default/objects/Assessment__c/fields/sobi_navi_other__c.field-meta.xml
<CustomField>
    <fullName>sobi_navi_other__c</fullName>
    <label>ナビ種類</label>
    <length>255</length>
    <type>Text</type>
</CustomField>