force-app/main/default/objects/Assessment__c/fields/sobi_pawer_slide_door_right__c.field-meta.xml
<CustomField>
    <fullName>sobi_pawer_slide_door_right__c</fullName>
    <label>パワースライドドア右</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>無</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>有</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>