force-app/main/default/objects/Assessment__c/fields/sobihin__c.field-meta.xml
<CustomField>
    <fullName>sobihin__c</fullName>
    <label>装備品等</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>