force-app/main/default/objects/Assessment__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>状態</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>事故車</fullName>
            </value>
            <value>
                <fullName>故障車</fullName>
            </value>
            <value>
                <fullName>中古車</fullName>
            </value>
            <value>
                <fullName>水害車</fullName>
            </value>
            <value>
                <fullName>火災車</fullName>
            </value>
            <value>
                <fullName>雹害車</fullName>
            </value>
            <value>
                <fullName>盗難車</fullName>
            </value>
            <value>
                <fullName>代行中古</fullName>
                <isActive>false</isActive>
                <label>代行中古</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>