force-app/main/default/objects/Assessment__c/fields/StorageName__c.field-meta.xml
<CustomField>
    <fullName>StorageName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>九條</description>
    <label>保管先名</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>査定表 (保管先名)</relationshipLabel>
    <relationshipName>StorageName_Assessment</relationshipName>
    <type>Lookup</type>
</CustomField>