force-app/main/default/objects/Assessment__c/fields/store__c.field-meta.xml
<CustomField>
    <fullName>store__c</fullName>
    <label>依頼店</label>
    <length>255</length>
    <type>Text</type>
</CustomField>