force-app/main/default/objects/Assessment__c/fields/suspended_flg__c.field-meta.xml
<CustomField>
    <fullName>suspended_flg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>中断フラグ</label>
    <type>Checkbox</type>
</CustomField>