force-app/main/default/objects/Assessment__c/fields/tanto_manage_bumon__c.field-meta.xml
<CustomField>
    <fullName>tanto_manage_bumon__c</fullName>
    <formula>TEXT( asses_tanto__r.manage_org__c )</formula>
    <label>統括部門</label>
    <type>Text</type>
</CustomField>