force-app/main/default/objects/Assessment__c/fields/teiin__c.field-meta.xml
<CustomField>
    <fullName>teiin__c</fullName>
    <label>定員</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>